--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sun.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -42,6 +42,8 @@
 <link rel="shortcut icon" href="images/logo.png" type="image/png">
 <link rel="stylesheet" href="css/style.css">
     <title>Weather App</title>
+    <link rel="icon"  href="sun.png">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
